--- a/WebPack/index.html
+++ b/WebPack/index.html
@@ -1,21 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Title</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      <h1>hola mundo</h1>
-      <div class="container">
+    <h1 class="text-center">hola mundo</h1>
+    <div class="container">
+      <div class="jumbotron">
+        <div class="form-group" id="PE1">
+          <label for="">Ingresa tu edad</label>
+          <input
+            type="number"
+            placeholder="Ingresa tu edad"
+            class="form-control"
+            id="edadUsuario"
+          />
+        </div>
 
+        <div class="row">
+          <div class="col-12">
+            <button class="btn btn-outline-primary btn-block" id="btnIniciar">Calcular</button>
+          </div>
+        </div>
       </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </div>
+   
+
+
   </body>
 </html>
