--- a/WebPack/index.html
+++ b/WebPack/index.html
@@ -28,6 +28,11 @@
           <div class="col-12">
             <button class="btn btn-outline-primary btn-block" id="btnIniciar">Calcular</button>
           </div>
+
+          <div class="col-12 mt-2">
+            <div class="alert alert-primary text-center" role="alert" id="resultado">
+            </div>
+          </div>
         </div>
       </div>
     </div>
