--- a/WebPack/index.html
+++ b/WebPack/index.html
@@ -18,7 +18,7 @@
           <label for="">Ingresa el nombre del usuario a eliminar</label>
           <input
             type="number"
-            placeholder="Ingresa tu edad"
+            placeholder="Ingresa nombre del usuario a eliminar"
             class="form-control"
             id="NombreUsuario"
           />
