--- a/WebPack/index.html
+++ b/WebPack/index.html
@@ -17,7 +17,7 @@
         <div class="form-group" id="PE1">
           <label for="">Ingresa el nombre del usuario a eliminar</label>
           <input
-            type="number"
+            type="text"
             placeholder="Ingresa nombre del usuario a eliminar"
             class="form-control"
             id="NombreUsuario"
