--- a/RxJS/index.html
+++ b/RxJS/index.html
@@ -1,19 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>RxJS</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-      
-  <h1>RxJS</h1>
+    <h1>RxJS</h1>
 
-
-
-
-
+    <div id="log-container"></div>
   </body>
 </html>
